--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-node_modules
+# dependencies
+/node_modules
+
+# production
+/build
+.next/
+/out/
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnp
+.pnp.js
+.pnpm-store
