--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #DATABASE_URL="postgresql://aidbadmin:admin123%21%40%23@localhost:5432/aifsdb4?schema=public"
 
 DATABASE_URL="postgresql://pooldbuser:Mazi!123@localhost:5432/aisfpool-1?schema=public"
-
+#DATABASE_URL="postgres://postgres.uacozkalnbobesfmxoff:NYV4zmPTgsVGR7Z3@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
 # NextAuth
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="E6Uw5XvJvWWKIWGL8qqhCT9rFJnMgF6nVIXB4GSINxc="
