--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "^19.0.0-rc.1",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.3.3",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "^4.0.0-alpha.29",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
